@@ -1,3 +1,9 @@
+2005-11-10  Alexis Sukrieh  <sukria@sukria.net>
+
+	* lib/backup-methods.sh:
+	  + bug fixed, always give the --listed-incremental flag when performing
+	  an incremental backup (even when doing a master tarball).
+
 2005-11-10  Alexis Sukrieh <sukria@sukria.net>
 
 	* lib/actions.sh:
